<resources>
    <string name="app_name">KarYab</string>
    <string name="action_settings">Settings</string>
    <string name="fullName">نام کامل</string>
    <string name="female">زن</string>
    <string name="male">مرد</string>
    <string name="usage">نوع کاربری</string>
    <string name="usageTitr">نوع کاربری:</string>
    <string name="welcome">خوش آمدید!</string>
    <string name="notGood">نا مناسب</string>
    <string name="excellent">عالی</string>
    <string name="normal">معمولی</string>
    <string name="description">توضیحات</string>
    <string name="skillName">نام مهارت</string>
    <string name="medium">متوسط</string>
    <string name="pleasevaluatetheskill">امتیاز دهی به این مهارت</string>
    <string name="skillvalue">امتیاز مهارت</string>
    <string name="workStartTime">تاریخ شروع</string>
    <string name="workStartDate">تاریخ شروع</string>
    <string name="workEndDate">تاریخ خاتمه</string>
    <string name="workLocationName">نام محل کار</string>
    <string name="title_activity_education">EDUCATIONActivity</string>
    <string name="educationLocation">محل تحصیل</string>
    <string name="educationDuration">مدت دوره(به ماه)</string>
    <string name="educationDurationByMonth">مدت دوره به ماه</string>
    <string name="finalGrade">معدل نهایی</string>
    <string name="title_activity_education_list">EducationListActivity</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="title_activity_phone_list">PhoneListActivity</string>
    <string name="title_activity_cell_phone">CellPhoneActivity</string>
    <string name="title_activity_cell_phone_list">CellPhoneListActivity</string>
    <string name="title_activity_adress">AdressActivity</string>
    <string name="title_activity_adress_list">AdressListActivity</string>
    <string name="title_activity_maill_adress">MaillAdressActivity</string>
    <string name="title_activity_mail_address_list">MailAddressListActivity</string>
    <string name="title_activity_in_app_purchase">InAppPurchaseActivity</string>
    <string name="title_activity_adad">AdadActivity</string>
    <string name="title_activity_skill_modify">SkillModifyActivity</string>
    <string name="title_activity_adress_modify">AdressModifyActivity</string>
    <string name="title_activity_cell_phone_modify">CellPhoneModifyActivity</string>
    <string name="title_activity_experience_modify">ExperienceModifyActivity</string>
    <string name="title_activity_education_modify">EducationModifyActivity</string>
    <string name="title_activity_mail_adress_modify">MailAdressModifyActivity</string>
    <string name="title_activity_phone_modify">PhoneModifyActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_adress_profile">AdressProfileActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_recover_password">RecoverPasswordActivity</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
