<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_welcome" tools:context=".MainActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/fullName"
        android:ems="10"
        android:id="@+id/fullNameEditText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_below="@+id/fullNameEditText"
        android:id="@+id/genderRadioGroup"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/fullNameEditText"
        android:layout_alignStart="@+id/fullNameEditText">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/femaleRadioButton"
            android:checked="false"
            android:text="@string/female" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maleRadioButton"
            android:checked="true"
            android:text="@string/male" />
    </RadioGroup>

    <requestFocus
        android:layout_alignTop="@+id/fullNameEditText"
        android:layout_alignLeft="@+id/fullNameEditText"
        android:layout_alignStart="@+id/fullNameEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/usageTitr"
        android:id="@+id/usageTitrTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/genderRadioGroup" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UsageToggleButton"
        android:layout_below="@+id/genderRadioGroup"
        android:layout_centerHorizontal="true"
        android:textOff="کارجو"
        android:textOn="کارفرما"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/humanIDtextView"
        android:layout_below="@+id/UsageToggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/asdprogressBar"
        android:layout_below="@+id/UsageToggleButton"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:indeterminate="false" />

</RelativeLayout>
