<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_education"
    tools:context="com.arsan.niloufar.karyab.EDUCATIONActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/educationLocation"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/educationLocationAutoCompleteTextView"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="رشته تحصیلی"
        android:id="@+id/textViewEducationBranch"
        android:layout_below="@+id/educationDiplomaAutoCompleteTextView"
        android:layout_alignLeft="@+id/textViewEducationDiploma"
        android:layout_alignStart="@+id/textViewEducationDiploma" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/educationBranchAutoCompleteTextView"
        android:layout_below="@+id/textViewEducationBranch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="مقطع تحصیلی"
        android:id="@+id/textViewEducationDiploma"
        android:layout_below="@+id/educationLocationAutoCompleteTextView"
        android:layout_alignRight="@+id/educationLocationAutoCompleteTextView"
        android:layout_alignEnd="@+id/educationLocationAutoCompleteTextView" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/educationDiplomaAutoCompleteTextView"
        android:layout_below="@+id/textViewEducationDiploma"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/educationDurationByMonth"
        android:id="@+id/textView6"
        android:layout_below="@+id/educationBranchAutoCompleteTextView"
        android:layout_alignRight="@+id/educationBranchAutoCompleteTextView"
        android:layout_alignEnd="@+id/educationBranchAutoCompleteTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/educationDurationEditText"
        android:layout_below="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/finalGrade"
        android:id="@+id/textView7"
        android:layout_below="@+id/educationDurationEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/finalGradeEditText"
        android:layout_below="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal" />
</RelativeLayout>
